[package]
name = "extract_har"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.5"
clap = {version="4.4.7",features=["derive"]}
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.108"
url = {version="2.4.1",features=["serde"]}
